# Snake

./: .gitignore  CMakeLists.txt  Makefile  README.md  app  board.cpp  board.h  constants.h  main.cpp  resource.cpp  resource.h
src/: board.cpp  main.cpp  resource.cpp  snake.cpp  snake.h
